[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E203, E226, E228, N802, N803, N806, N812, N813, N815, N816, W503, W504
exclude =
  bin,
  doc,
  doc/conf.py,
  **/*/__init__.py,
  **/*/version.py,
  tests/.tests
per-file-ignores = doc/conf.py:F821

[tool:pytest]
addopts = --flake8 --black
flake8-ignore = E133 E203 E226 E228 N802 N803 N806 N812 N813 N815 N816 W503 W504
markers =
    csc_integtest: marks CSC-specific integration tests (deselect with 
    '-m "not csc_integtest"').

[options]
setup_requires=setuptools_scm
